<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources>
    <string name="app_name">CragTrack</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_location_selector">Select location</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_statistics">Statistics</string>
    <string name="option_get_place">Get place</string>
    <string name="select_location">Select location</string>

    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signin_google">Sign in with Google</string>
    <string name="login_create_account">Create new Account</string>
    <string name="login_no_account">Skip Account creation</string>
    <string name="error_login_empty_email">Please enter your email address!</string>
    <string name="error_login_empty_password">Please enter your password!</string>
    <string name="login_reset_password">Reset password</string>
    <string name="login_sent_reset_mail">Sent password reset email!</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="appbar_settings">Settings</string>
    <string name="appbar_signout">Sign out</string>

    <string name="session_newSession">New Session</string>
    <string name="session_location">Location</string>
</resources>
